testdata/typechecker/error/arrays/ArrayTest-err1.java
int main() {
            int[] b;
            int c;
            b = new int[false]; // TE
		return 0;
}

